# ft_printf

./: CMakeLists.txt  Makefile  README.md  auxiliary.c  ft_assembly.c  ft_auxiliary.c  ft_auxiliary_2.c  ft_basic_functions.c  ft_c_type.c  ft_color_output.c  ft_invalid_case.c  ft_major_parsing.c  ft_minor_parsing.c  ft_parsing.c  ft_parsing_1st_part.c  ft_parsing_2nd_part.c  ft_printf.c  ft_printf.h  ft_type_b.c  ft_type_b_auxiliary.c  ft_type_c.c  ft_type_d.c  ft_type_d_auxiliary.c  ft_type_f.c  ft_type_f_auxiliary.c  ft_type_f_auxiliary_2.c  ft_type_o.c  ft_type_o_auxiliary.c  ft_type_p.c  ft_type_p_auxiliary.c  ft_type_r.c  ft_type_r_auxiliary.c  ft_type_s.c  ft_type_s_auxiliary.c  ft_type_u.c  ft_type_u_auxiliary.c  ft_type_x.c  ft_type_x_auxiliary.c  ft_valid_case.c  main.c
libft/: Makefile  ft_itoa_base_ull_ed.c  ft_strjoin_free.c  ft_strsub_free.c  libft.h
srcs/: ft_basic_functions.c  ft_printf.h
